--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
   <h3>Cube State (Text):</h3>
   <pre id="cubeOutput"></pre>
 
-  <script src="cube.js"></script>
+  <script src="Cube.js"></script>
 </body>
 </html>
